# Helios-Memory-Substrate-1.1

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Eval .prompt.yml  INVENTORSHIP_AND_PRIOR_ART.md  LICENSE  PATENTS.md  README.md  ROADMAP.md  SECURITY.md  api.py  app.py  build.py  helios_core.py  init_db.py  production_node.py  pyproject.toml  quark_ingest (1).py  requirements.txt  run_api.bat  run_api.sh  schema.sql
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  security-advisories.yml
.github/workflows/: codeql.yml  main.yml
core/: audit.py  db.py  harmonic.py  llm.py  memory.py  qdrant_client.py  tenants.py  tiering.py
docs/research/: helios-audit-applied.md  helios-audit.md  helios-backports-falsifiability-appendix.md  helios-ip-claimables-v1.md  helios-memory-applied.diff  helios-paper-section-2-revision.md  helios-research-blueprint-erratum-v1.md  helios-research-blueprint.md
experimental/gnap/: README.md
frontend/: app.js  index.html  styles.css
llm_integrations/: deepseek_client.py  gpt5_client.py
migrations/: 002_tiering_namespace_audit.sql  003_tenants_apikeys_v3.sql
tests/: conftest.py  test_api.py  test_chat_history.py  test_db.py  test_harmonic.py  test_memory.py  test_qdrant.py  test_schema.py  test_tenants.py  test_tiering.py
