[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-memory"
version = "0.1.0"
description = "User-scoped LLM memory backend with FTS5+LLM-rerank retrieval"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Travis Papenburg" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/your-username/helios-memory"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
